--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-    "java.debug.settings.onBuildFailureProceed": true
+    "java.debug.settings.onBuildFailureProceed": true,
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "jcalendar-1.4/lib/jcalendar-1.4.jar",
+        "jcalendar-1.4/lib/jgoodies-common-1.2.0.jar",
+        "jcalendar-1.4/lib/jgoodies-looks-2.4.1.jar",
+        "jcalendar-1.4/lib/junit-4.6.jar"
+    ]
 }
