--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,8 @@
         "jcalendar-1.4/lib/jgoodies-common-1.2.0.jar",
         "jcalendar-1.4/lib/jgoodies-looks-2.4.1.jar",
         "jcalendar-1.4/lib/junit-4.6.jar"
-    ]
+    ],
+    "codesnap.containerPadding": "",
+    "codesnap.transparentBackground": true,
+    "codesnap.target": "window"
 }
